feat: add mini quadrotor SITL airframes (DJI Mini 4 Pro sized)
- Create 10020_gazebo-classic_mini_quadrotor airframe for Gazebo-Classic SITL
- Create 10021_jmavsim_mini_quadrotor airframe for jMAVSim SITL
- Register new airframes in CMakeLists.txt build system

Specifications:
- ~245mm wheelbase matching DJI Mini 4 Pro dimensions
- 0.0865m rotor arm length in X-quad configuration
- 4-rotor multicopter with standard control allocator
- Full PX4 SITL support for both simulators

Usage:
  Gazebo-Classic: PX4_SIM_MODEL=gazebo-classic_mini_quadrotor ./bin/px4
  jMAVSim: PX4_SIM_MODEL=jmavsim_mini_quadrotor ./bin/px4

Verified:
- ✓ Successful build with px4_sitl_nolockstep
- ✓ Correct airframe autostart IDs (10020, 10021)
- ✓ Proper initialization and MAVLink setup
- ✓ All PX4 subsystems functional

See CHANGES_SUMMARY.md for detailed information.

--- a/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
@@ -99,6 +99,8 @@ px4_add_romfs_files(
 	10017_jmavsim_iris
 	10018_gazebo-classic_iris_foggy_lidar
 	10019_gazebo-classic_omnicopter
+	10020_gazebo-classic_mini_quadrotor
+	10021_jmavsim_mini_quadrotor
 	10030_gazebo-classic_px4vision
 
 	10040_sihsim_quadx
