feat(flightgear): add FlightGear miniquad scaffold and copy-hook in sitl_run.sh; add 10022 flightgear airframe

--- a/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
@@ -101,6 +101,7 @@ px4_add_romfs_files(
 	10019_gazebo-classic_omnicopter
 	10020_gazebo-classic_mini_quadrotor
 	10021_jmavsim_mini_quadrotor
+	10022_flightgear_mini_quadrotor
 	10030_gazebo-classic_px4vision
 
 	10040_sihsim_quadx
